// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CharacterItem should have same snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vn4pqi"
  >
    <div
      class="sc-jTzLTM bnQVHV"
    >
      <header
        class="sc-fjdhpX dhOgqq"
      >
        <span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite; width: 300px; height: 300px;"
          >
            ‌
          </span>
        </span>
      </header>
      <div
        class="sc-chPdSV kDzWaJ"
      >
        <span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite;"
          >
            ‌
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CharacterItem when passing valid values should have same snapshot 1`] = `
<DocumentFragment>
  <div
    class="css-vn4pqi"
  >
    <div
      class="sc-jTzLTM bnQVHV"
    >
      <header
        class="sc-fjdhpX dhOgqq"
      >
        <span>
          <span
            class="css-19bon8n react-loading-skeleton"
            style="animation: animation-16jpnkj 1.2s ease-in-out infinite; width: 300px; height: 300px;"
          >
            ‌
          </span>
        </span>
        <img
          class="sc-bwzfXH eKeXgs"
          height="300"
          width="300"
        />
        <span
          class="sc-htpNat jZIyuc sc-jzJRlG JsMMJ"
          color="#444"
        >
          name
        </span>
      </header>
      <div
        class="sc-chPdSV kDzWaJ"
      >
        <div
          class="sc-bxivhb kkzDWN"
        >
          <span
            class="sc-htpNat SwWzv"
            color="#999"
          >
            Species
          </span>
          <span
            class="sc-htpNat kNOgIk sc-ifAKCX gENqNG"
            color="teal"
          >
            species
          </span>
        </div>
        <div
          class="sc-bxivhb kkzDWN"
        >
          <span
            class="sc-htpNat SwWzv"
            color="#999"
          >
            Gender
          </span>
          <span
            class="sc-htpNat kNOgIk sc-ifAKCX gENqNG"
            color="teal"
          >
            gender
          </span>
        </div>
        <div
          class="sc-bxivhb kkzDWN"
        >
          <span
            class="sc-htpNat SwWzv"
            color="#999"
          >
            Origin
          </span>
          <span
            class="sc-htpNat kNOgIk sc-ifAKCX gENqNG"
            color="teal"
          >
            origin
          </span>
        </div>
      </div>
      <button
        class="sc-bdVaJa cnVkUI sc-kAzzGY dLFxrJ"
        color="teal"
        data-testid="button"
      >
        Details
      </button>
    </div>
  </div>
</DocumentFragment>
`;
